--- a/ml_sentiment_analysis_1_score_reviews_via_service.ipynb
+++ b/ml_sentiment_analysis_1_score_reviews_via_service.ipynb
@@ -32,10 +32,21 @@
     "colab": {
       "name": "ml-sentiment-analysis-1-score_reviews_via_service.ipynb",
       "provenance": [],
-      "collapsed_sections": []
-    },
+      "collapsed_sections": [],
+      "include_colab_link": true
+    }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/monilchheda/manning-live-project-training-and-deploying-an-ml-model-as-a-microservice/blob/master/ml_sentiment_analysis_1_score_reviews_via_service.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -68,7 +79,7 @@
         },
         "id": "EQdK4hX9Rxov",
         "colab_type": "code",
-        "outputId": "e53de2b5-eba2-46ec-b0d0-f87607820882",
+        "outputId": "635c9e55-d747-4bff-cf61-5817e2f118be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -79,13 +90,13 @@
         "\n",
         "download('movie_reviews')"
       ],
-      "execution_count": 2,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package movie_reviews to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/movie_reviews.zip.\n"
+            "[nltk_data]   Package movie_reviews is already up-to-date!\n"
           ],
           "name": "stdout"
         },
@@ -99,7 +110,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 47
         }
       ]
     },
@@ -165,10 +176,10 @@
       "metadata": {
         "id": "_TW5rj_ARxpA",
         "colab_type": "code",
-        "outputId": "e3560456-6af0-40cb-8648-2e0716233b12",
+        "outputId": "7e8c2ea6-2a47-4d1b-91db-dc544b3fc9bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 391
+          "height": 204
         }
       },
       "source": [
@@ -216,44 +227,23 @@
         "print(result)\n",
         "'''\n"
       ],
-      "execution_count": 5,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting algorithmia\n",
-            "  Downloading https://files.pythonhosted.org/packages/09/55/80d1625ce0d309957fe6494e11f9c0b770a5acb0839a8878649c0826156e/algorithmia-1.3.0-py2.py3-none-any.whl\n",
+            "Requirement already satisfied: algorithmia in /usr/local/lib/python3.6/dist-packages (1.3.0)\n",
+            "Requirement already satisfied: enum34 in /usr/local/lib/python3.6/dist-packages (from algorithmia) (1.1.10)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from algorithmia) (2.23.0)\n",
+            "Requirement already satisfied: algorithmia-api-client==1.1.0 in /usr/local/lib/python3.6/dist-packages (from algorithmia) (1.1.0)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from algorithmia) (1.12.0)\n",
-            "Collecting algorithmia-api-client==1.1.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4f/11/238485cd3722bf28451549cf5bde8f4e47825c56d1a4d09439a75354269d/algorithmia_api_client-1.1.0-py2.py3-none-any.whl (122kB)\n",
-            "\u001b[K     |████████████████████████████████| 122kB 4.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from algorithmia) (2.23.0)\n",
-            "Collecting enum34\n",
-            "  Downloading https://files.pythonhosted.org/packages/63/f6/ccb1c83687756aeabbf3ca0f213508fcfb03883ff200d201b3a4c60cedcc/enum34-1.1.10-py3-none-any.whl\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from algorithmia-api-client==1.1.0->algorithmia) (2020.4.5.1)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from algorithmia-api-client==1.1.0->algorithmia) (2.8.1)\n",
-            "Requirement already satisfied: urllib3>=1.15 in /usr/local/lib/python3.6/dist-packages (from algorithmia-api-client==1.1.0->algorithmia) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->algorithmia) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->algorithmia) (1.24.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->algorithmia) (2.9)\n",
-            "Installing collected packages: algorithmia-api-client, enum34, algorithmia\n",
-            "Successfully installed algorithmia-1.3.0 algorithmia-api-client-1.1.0 enum34-1.1.10\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->algorithmia) (2020.4.5.1)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->algorithmia) (3.0.4)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from algorithmia-api-client==1.1.0->algorithmia) (2.8.1)\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "enum"
-                ]
-              }
-            }
-          },
-          "metadata": {
-            "tags": []
-          }
         },
         {
           "output_type": "execute_result",
@@ -265,7 +255,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 49
         }
       ]
     },
@@ -286,11 +276,7 @@
       "metadata": {
         "id": "nLw-af0bRxpI",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 323
-        },
-        "outputId": "a32d215f-0180-4b03-aac6-c8109d6da518"
+        "colab": {}
       },
       "source": [
         "results_pos = []\n",
@@ -319,33 +305,8 @@
         "    if (cneg == 10):\n",
         "      break\n"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "+ result 1\n",
-            "+ result 2\n",
-            "+ result 3\n",
-            "+ result 4\n",
-            "+ result 5\n",
-            "+ result 6\n",
-            "+ result 7\n",
-            "+ result 8\n",
-            "+ result 9\n",
-            "- result 1\n",
-            "- result 2\n",
-            "- result 3\n",
-            "- result 4\n",
-            "- result 5\n",
-            "- result 6\n",
-            "- result 7\n",
-            "- result 8\n",
-            "- result 9\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -364,11 +325,7 @@
       "metadata": {
         "id": "F10EyfcqRxpO",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "4552717f-bcea-4670-f233-62b63473f38d"
+        "colab": {}
       },
       "source": [
         "correct_pos = results_pos.count('pos')\n",
@@ -382,18 +339,8 @@
         "print('Negative reviews: {}% correct'.format(accuracy_neg*100))\n",
         "print('Overall accuracy: {}% correct'.format(accuracy_all*100))"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Positive reviews: 88.88888888888889% correct\n",
-            "Negative reviews: 55.55555555555556% correct\n",
-            "Overall accuracy: 72.22222222222221% correct\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
